// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._40iiss10,html._40iiss10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="tnh8au0 _1vjf7ro10 _1vjf7ro13">
+        <div class="o47gt70 _40iiss8p _40iiss7l _40iissax _40iiss9t _40iiss5d _40iiss69 _40iissi9 _40iiss4j _40iiss4c _1vjf7ro10 _1vjf7ro13 _40iiss33 _40iiss36">
+          <span class="o47gt70 _40iiss4x _1vjf7ro0 _1vjf7ro1 _1vjf7ro1t _1vjf7roa _1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .o47gt70 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
.o47gt71 {
  display: block;
}
.o47gt72 {
  line-height: 1;
}
.o47gt73 {
  list-style: none;
}
.o47gt74 {
  quotes: none;
}
.o47gt74:after,
.o47gt74:before {
  content: "";
}
.o47gt75 {
  border-collapse: collapse;
  border-spacing: 0;
}
.o47gt76 {
  -webkit-appearance: none;
  appearance: none;
}
.o47gt77 {
  background-color: transparent;
}
.o47gt78 {
  outline: var(--dhlzy710) solid transparent;
  transition: outline-color 0.125s ease;
}
.o47gt78:focus-visible {
  outline-color: var(--dhlzy7m);
}
.o47gt7a {
  color: inherit;
}
.o47gt7b:disabled {
  opacity: 1;
}
.o47gt7b::-ms-expand {
  display: none;
}
.o47gt7d[type="number"] {
  -moz-appearance: textfield;
}
.o47gt7d[type="number"]::-webkit-inner-spin-button,
.o47gt7d[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.o47gt7d::-ms-clear {
  display: none;
}
.o47gt7d::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.o47gt7g {
  color: inherit;
  text-decoration: none;
}
._40iiss0 {
  overflow: hidden;
}
._40iiss1 {
  overflow: scroll;
}
._40iiss2 {
  overflow: visible;
}
._40iiss3 {
  overflow: auto;
}
._40iiss4 {
  -webkit-user-select: none;
  user-select: none;
}
._40iiss5 {
  outline: var(--dhlzy710) solid transparent;
  transition: outline-color 0.125s ease;
}
._40iiss5:focus-visible {
  outline-color: var(--dhlzy7m);
}
._40iiss6 {
  opacity: 0;
}
._40iiss7 {
  z-index: 0;
}
._40iiss8 {
  z-index: 1;
}
._40iiss9 {
  z-index: 2;
}
._40iissa {
  z-index: 90;
}
._40iissb {
  z-index: 100;
}
._40iissc {
  z-index: 200;
}
._40iissd {
  z-index: 290;
}
._40iisse {
  z-index: 300;
}
._40iissf {
  z-index: 400;
}
._40iissg {
  cursor: default;
}
._40iissh {
  cursor: pointer;
}
._40iissi {
  pointer-events: none;
}
._40iissj {
  top: 0;
}
._40iissk {
  bottom: 0;
}
._40iissl {
  left: 0;
}
._40iissm {
  right: 0;
}
._40iissn {
  height: 100%;
}
._40iisso {
  height: var(--dhlzy79);
}
._40iissp {
  width: 100%;
}
._40iissq {
  width: var(--dhlzy79);
}
._40iissr {
  min-width: 0;
}
._40iisss {
  max-width: var(--dhlzy711);
}
._40iisst {
  max-width: var(--dhlzy712);
}
._40iissu {
  max-width: var(--dhlzy713);
}
._40iissv {
  max-width: var(--dhlzy714);
}
._40iissw {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._40iissx {
  transition: var(--dhlzy75h);
}
._40iissy {
  transition: var(--dhlzy75i);
}
._40iissz:active {
  transform: var(--dhlzy75j);
}
html._40iiss10 ._40iiss12,
html:not(._40iiss10) ._40iiss11 {
  background: var(--dhlzy71s);
}
html._40iiss10 ._40iiss14,
html:not(._40iiss10) ._40iiss13 {
  background: var(--dhlzy71t);
}
html._40iiss10 ._40iiss16,
html:not(._40iiss10) ._40iiss15 {
  background: var(--dhlzy71u);
}
html._40iiss10 ._40iiss18,
html:not(._40iiss10) ._40iiss17 {
  background: var(--dhlzy71v);
}
html._40iiss10 ._40iiss1a,
html:not(._40iiss10) ._40iiss19 {
  background: var(--dhlzy71w);
}
html._40iiss10 ._40iiss1c,
html:not(._40iiss10) ._40iiss1b {
  background: var(--dhlzy71x);
}
html._40iiss10 ._40iiss1e,
html:not(._40iiss10) ._40iiss1d {
  background: var(--dhlzy71y);
}
html._40iiss10 ._40iiss1g,
html:not(._40iiss10) ._40iiss1f {
  background: var(--dhlzy71z);
}
html._40iiss10 ._40iiss1i,
html:not(._40iiss10) ._40iiss1h {
  background: var(--dhlzy720);
}
html._40iiss10 ._40iiss1k,
html:not(._40iiss10) ._40iiss1j {
  background: var(--dhlzy721);
}
html._40iiss10 ._40iiss1m,
html:not(._40iiss10) ._40iiss1l {
  background: var(--dhlzy722);
}
html._40iiss10 ._40iiss1o,
html:not(._40iiss10) ._40iiss1n {
  background: var(--dhlzy723);
}
html._40iiss10 ._40iiss1q,
html:not(._40iiss10) ._40iiss1p {
  background: var(--dhlzy724);
}
html._40iiss10 ._40iiss1s,
html:not(._40iiss10) ._40iiss1r {
  background: var(--dhlzy725);
}
html._40iiss10 ._40iiss1u,
html:not(._40iiss10) ._40iiss1t {
  background: var(--dhlzy726);
}
html._40iiss10 ._40iiss1w,
html:not(._40iiss10) ._40iiss1v {
  background: var(--dhlzy727);
}
html._40iiss10 ._40iiss1y,
html:not(._40iiss10) ._40iiss1x {
  background: var(--dhlzy728);
}
html._40iiss10 ._40iiss20,
html:not(._40iiss10) ._40iiss1z {
  background: var(--dhlzy729);
}
html._40iiss10 ._40iiss22,
html:not(._40iiss10) ._40iiss21 {
  background: var(--dhlzy72a);
}
html._40iiss10 ._40iiss24,
html:not(._40iiss10) ._40iiss23 {
  background: var(--dhlzy72b);
}
html._40iiss10 ._40iiss26,
html:not(._40iiss10) ._40iiss25 {
  background: var(--dhlzy72c);
}
html._40iiss10 ._40iiss28,
html:not(._40iiss10) ._40iiss27 {
  background: var(--dhlzy72d);
}
html._40iiss10 ._40iiss2a,
html:not(._40iiss10) ._40iiss29 {
  background: var(--dhlzy72e);
}
html._40iiss10 ._40iiss2c,
html:not(._40iiss10) ._40iiss2b {
  background: var(--dhlzy72f);
}
html._40iiss10 ._40iiss2e,
html:not(._40iiss10) ._40iiss2d {
  background: var(--dhlzy72g);
}
html._40iiss10 ._40iiss2g,
html:not(._40iiss10) ._40iiss2f {
  background: var(--dhlzy72h);
}
html._40iiss10 ._40iiss2i,
html:not(._40iiss10) ._40iiss2h {
  background: var(--dhlzy72i);
}
html._40iiss10 ._40iiss2k,
html:not(._40iiss10) ._40iiss2j {
  background: var(--dhlzy72j);
}
html._40iiss10 ._40iiss2m,
html:not(._40iiss10) ._40iiss2l {
  background: var(--dhlzy72k);
}
html._40iiss10 ._40iiss2o,
html:not(._40iiss10) ._40iiss2n {
  background: var(--dhlzy72l);
}
html._40iiss10 ._40iiss2q,
html:not(._40iiss10) ._40iiss2p {
  background: var(--dhlzy72m);
}
html._40iiss10 ._40iiss2s,
html:not(._40iiss10) ._40iiss2r {
  background: var(--dhlzy72n);
}
html._40iiss10 ._40iiss2u,
html:not(._40iiss10) ._40iiss2t {
  background: var(--dhlzy72o);
}
html._40iiss10 ._40iiss2w,
html:not(._40iiss10) ._40iiss2v {
  background: var(--dhlzy72p);
}
html._40iiss10 ._40iiss2y,
html:not(._40iiss10) ._40iiss2x {
  background: var(--dhlzy72q);
}
html._40iiss10 ._40iiss30,
html:not(._40iiss10) ._40iiss2z {
  background: var(--dhlzy72r);
}
html._40iiss10 ._40iiss32,
html:not(._40iiss10) ._40iiss31 {
  background: var(--dhlzy72s);
}
html._40iiss10 ._40iiss34,
html:not(._40iiss10) ._40iiss33 {
  background: var(--dhlzy72t);
}
html._40iiss10 ._40iiss36,
html:not(._40iiss10) ._40iiss35 {
  background: var(--dhlzy72u);
}
html._40iiss10 ._40iiss38,
html:not(._40iiss10) ._40iiss37 {
  box-shadow: var(--dhlzy75k);
}
html._40iiss10 ._40iiss3a,
html:not(._40iiss10) ._40iiss39 {
  box-shadow: var(--dhlzy75l);
}
html._40iiss10 ._40iiss3c,
html:not(._40iiss10) ._40iiss3b {
  box-shadow: var(--dhlzy75m);
}
html._40iiss10 ._40iiss3e,
html:not(._40iiss10) ._40iiss3d {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7f);
}
html._40iiss10 ._40iiss3g,
html:not(._40iiss10) ._40iiss3f {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7g);
}
html._40iiss10 ._40iiss3i,
html:not(._40iiss10) ._40iiss3h {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7f);
}
html._40iiss10 ._40iiss3k,
html:not(._40iiss10) ._40iiss3j {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7g);
}
html._40iiss10 ._40iiss3m,
html:not(._40iiss10) ._40iiss3l {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7h);
}
html._40iiss10 ._40iiss3o,
html:not(._40iiss10) ._40iiss3n {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7i);
}
html._40iiss10 ._40iiss3q,
html:not(._40iiss10) ._40iiss3p {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7j);
}
html._40iiss10 ._40iiss3s,
html:not(._40iiss10) ._40iiss3r {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7j);
}
html._40iiss10 ._40iiss3u,
html:not(._40iiss10) ._40iiss3t {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7k);
}
html._40iiss10 ._40iiss3w,
html:not(._40iiss10) ._40iiss3v {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7k);
}
html._40iiss10 ._40iiss3y,
html:not(._40iiss10) ._40iiss3x {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7l);
}
html._40iiss10 ._40iiss40,
html:not(._40iiss10) ._40iiss3z {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7n);
}
html._40iiss10 ._40iiss42,
html:not(._40iiss10) ._40iiss41 {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7n);
}
html._40iiss10 ._40iiss44,
html:not(._40iiss10) ._40iiss43 {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7o);
}
html._40iiss10 ._40iiss46,
html:not(._40iiss10) ._40iiss45 {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7o);
}
html._40iiss10 ._40iiss48,
html:not(._40iiss10) ._40iiss47 {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7p);
}
html._40iiss10 ._40iiss4a,
html:not(._40iiss10) ._40iiss49 {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7q);
}
html._40iiss10 ._40iiss4c,
html:not(._40iiss10) ._40iiss4b {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7r);
}
html._40iiss10 ._40iiss4e,
html:not(._40iiss10) ._40iiss4d {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7r);
}
html._40iiss10 ._40iiss4g,
html:not(._40iiss10) ._40iiss4f {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7s);
}
html._40iiss10 ._40iiss4i,
html:not(._40iiss10) ._40iiss4h {
  box-shadow: inset 0 0 0 var(--dhlzy7z) var(--dhlzy7s);
}
html._40iiss10 ._40iiss4k,
html:not(._40iiss10) ._40iiss4j {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7t);
}
html._40iiss10 ._40iiss4m,
html:not(._40iiss10) ._40iiss4l {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7u);
}
html._40iiss10 ._40iiss4o,
html:not(._40iiss10) ._40iiss4n {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7v);
}
html._40iiss10 ._40iiss4q,
html:not(._40iiss10) ._40iiss4p {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7w);
}
html._40iiss10 ._40iiss4s,
html:not(._40iiss10) ._40iiss4r {
  box-shadow: inset 0 0 0 var(--dhlzy7y) var(--dhlzy7x);
}
._40iiss4t {
  display: none;
}
._40iiss4x {
  display: block;
}
._40iiss51 {
  display: inline;
}
._40iiss55 {
  display: inline-block;
}
._40iiss59 {
  display: flex;
}
._40iiss5d {
  position: relative;
}
._40iiss5h {
  position: absolute;
}
._40iiss5l {
  position: fixed;
}
._40iiss5p {
  position: sticky;
}
._40iiss5t {
  border-radius: 0;
}
._40iiss5x {
  border-radius: 9999px;
}
._40iiss61 {
  border-radius: var(--dhlzy7b);
}
._40iiss65 {
  border-radius: var(--dhlzy7c);
}
._40iiss69 {
  border-radius: var(--dhlzy7d);
}
._40iiss6d {
  border-radius: var(--dhlzy7e);
}
._40iiss6h {
  gap: var(--dhlzy70);
}
._40iiss6l {
  gap: var(--dhlzy71);
}
._40iiss6p {
  gap: var(--dhlzy72);
}
._40iiss6t {
  gap: var(--dhlzy73);
}
._40iiss6x {
  gap: var(--dhlzy74);
}
._40iiss71 {
  gap: var(--dhlzy75);
}
._40iiss75 {
  gap: var(--dhlzy76);
}
._40iiss79 {
  gap: var(--dhlzy77);
}
._40iiss7d {
  gap: var(--dhlzy78);
}
._40iiss7h {
  gap: 0;
}
._40iiss7l {
  padding-top: var(--dhlzy70);
}
._40iiss7p {
  padding-top: var(--dhlzy71);
}
._40iiss7t {
  padding-top: var(--dhlzy72);
}
._40iiss7x {
  padding-top: var(--dhlzy73);
}
._40iiss81 {
  padding-top: var(--dhlzy74);
}
._40iiss85 {
  padding-top: var(--dhlzy75);
}
._40iiss89 {
  padding-top: var(--dhlzy76);
}
._40iiss8d {
  padding-top: var(--dhlzy77);
}
._40iiss8h {
  padding-top: var(--dhlzy78);
}
._40iiss8l {
  padding-top: 0;
}
._40iiss8p {
  padding-bottom: var(--dhlzy70);
}
._40iiss8t {
  padding-bottom: var(--dhlzy71);
}
._40iiss8x {
  padding-bottom: var(--dhlzy72);
}
._40iiss91 {
  padding-bottom: var(--dhlzy73);
}
._40iiss95 {
  padding-bottom: var(--dhlzy74);
}
._40iiss99 {
  padding-bottom: var(--dhlzy75);
}
._40iiss9d {
  padding-bottom: var(--dhlzy76);
}
._40iiss9h {
  padding-bottom: var(--dhlzy77);
}
._40iiss9l {
  padding-bottom: var(--dhlzy78);
}
._40iiss9p {
  padding-bottom: 0;
}
._40iiss9t {
  padding-right: var(--dhlzy70);
}
._40iiss9x {
  padding-right: var(--dhlzy71);
}
._40iissa1 {
  padding-right: var(--dhlzy72);
}
._40iissa5 {
  padding-right: var(--dhlzy73);
}
._40iissa9 {
  padding-right: var(--dhlzy74);
}
._40iissad {
  padding-right: var(--dhlzy75);
}
._40iissah {
  padding-right: var(--dhlzy76);
}
._40iissal {
  padding-right: var(--dhlzy77);
}
._40iissap {
  padding-right: var(--dhlzy78);
}
._40iissat {
  padding-right: 0;
}
._40iissax {
  padding-left: var(--dhlzy70);
}
._40iissb1 {
  padding-left: var(--dhlzy71);
}
._40iissb5 {
  padding-left: var(--dhlzy72);
}
._40iissb9 {
  padding-left: var(--dhlzy73);
}
._40iissbd {
  padding-left: var(--dhlzy74);
}
._40iissbh {
  padding-left: var(--dhlzy75);
}
._40iissbl {
  padding-left: var(--dhlzy76);
}
._40iissbp {
  padding-left: var(--dhlzy77);
}
._40iissbt {
  padding-left: var(--dhlzy78);
}
._40iissbx {
  padding-left: 0;
}
._40iissc1 {
  margin-top: var(--dhlzy70);
}
._40iissc5 {
  margin-top: var(--dhlzy71);
}
._40iissc9 {
  margin-top: var(--dhlzy72);
}
._40iisscd {
  margin-top: var(--dhlzy73);
}
._40iissch {
  margin-top: var(--dhlzy74);
}
._40iisscl {
  margin-top: var(--dhlzy75);
}
._40iisscp {
  margin-top: var(--dhlzy76);
}
._40iissct {
  margin-top: var(--dhlzy77);
}
._40iisscx {
  margin-top: var(--dhlzy78);
}
._40iissd1 {
  margin-top: 0;
}
._40iissd5 {
  margin-bottom: var(--dhlzy70);
}
._40iissd9 {
  margin-bottom: var(--dhlzy71);
}
._40iissdd {
  margin-bottom: var(--dhlzy72);
}
._40iissdh {
  margin-bottom: var(--dhlzy73);
}
._40iissdl {
  margin-bottom: var(--dhlzy74);
}
._40iissdp {
  margin-bottom: var(--dhlzy75);
}
._40iissdt {
  margin-bottom: var(--dhlzy76);
}
._40iissdx {
  margin-bottom: var(--dhlzy77);
}
._40iisse1 {
  margin-bottom: var(--dhlzy78);
}
._40iisse5 {
  margin-bottom: 0;
}
._40iisse9 {
  margin-right: var(--dhlzy70);
}
._40iissed {
  margin-right: var(--dhlzy71);
}
._40iisseh {
  margin-right: var(--dhlzy72);
}
._40iissel {
  margin-right: var(--dhlzy73);
}
._40iissep {
  margin-right: var(--dhlzy74);
}
._40iisset {
  margin-right: var(--dhlzy75);
}
._40iissex {
  margin-right: var(--dhlzy76);
}
._40iissf1 {
  margin-right: var(--dhlzy77);
}
._40iissf5 {
  margin-right: var(--dhlzy78);
}
._40iissf9 {
  margin-right: 0;
}
._40iissfd {
  margin-left: var(--dhlzy70);
}
._40iissfh {
  margin-left: var(--dhlzy71);
}
._40iissfl {
  margin-left: var(--dhlzy72);
}
._40iissfp {
  margin-left: var(--dhlzy73);
}
._40iissft {
  margin-left: var(--dhlzy74);
}
._40iissfx {
  margin-left: var(--dhlzy75);
}
._40iissg1 {
  margin-left: var(--dhlzy76);
}
._40iissg5 {
  margin-left: var(--dhlzy77);
}
._40iissg9 {
  margin-left: var(--dhlzy78);
}
._40iissgd {
  margin-left: 0;
}
._40iissgh {
  align-items: flex-start;
}
._40iissgl {
  align-items: center;
}
._40iissgp {
  align-items: flex-end;
}
._40iissgt {
  justify-content: flex-start;
}
._40iissgx {
  justify-content: center;
}
._40iissh1 {
  justify-content: flex-end;
}
._40iissh5 {
  justify-content: space-between;
}
._40iissh9 {
  flex-direction: row;
}
._40iisshd {
  flex-direction: row-reverse;
}
._40iisshh {
  flex-direction: column;
}
._40iisshl {
  flex-direction: column-reverse;
}
._40iisshp {
  flex-wrap: wrap;
}
._40iissht {
  flex-wrap: nowrap;
}
._40iisshx {
  flex-shrink: 0;
}
._40iissi1 {
  flex-grow: 0;
}
._40iissi5 {
  flex-grow: 1;
}
._40iissi9 {
  text-align: left;
}
._40iissid {
  text-align: center;
}
._40iissih {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._40iiss4u {
    display: none;
  }
  ._40iiss4y {
    display: block;
  }
  ._40iiss52 {
    display: inline;
  }
  ._40iiss56 {
    display: inline-block;
  }
  ._40iiss5a {
    display: flex;
  }
  ._40iiss5e {
    position: relative;
  }
  ._40iiss5i {
    position: absolute;
  }
  ._40iiss5m {
    position: fixed;
  }
  ._40iiss5q {
    position: sticky;
  }
  ._40iiss5u {
    border-radius: 0;
  }
  ._40iiss5y {
    border-radius: 9999px;
  }
  ._40iiss62 {
    border-radius: var(--dhlzy7b);
  }
  ._40iiss66 {
    border-radius: var(--dhlzy7c);
  }
  ._40iiss6a {
    border-radius: var(--dhlzy7d);
  }
  ._40iiss6e {
    border-radius: var(--dhlzy7e);
  }
  ._40iiss6i {
    gap: var(--dhlzy70);
  }
  ._40iiss6m {
    gap: var(--dhlzy71);
  }
  ._40iiss6q {
    gap: var(--dhlzy72);
  }
  ._40iiss6u {
    gap: var(--dhlzy73);
  }
  ._40iiss6y {
    gap: var(--dhlzy74);
  }
  ._40iiss72 {
    gap: var(--dhlzy75);
  }
  ._40iiss76 {
    gap: var(--dhlzy76);
  }
  ._40iiss7a {
    gap: var(--dhlzy77);
  }
  ._40iiss7e {
    gap: var(--dhlzy78);
  }
  ._40iiss7i {
    gap: 0;
  }
  ._40iiss7m {
    padding-top: var(--dhlzy70);
  }
  ._40iiss7q {
    padding-top: var(--dhlzy71);
  }
  ._40iiss7u {
    padding-top: var(--dhlzy72);
  }
  ._40iiss7y {
    padding-top: var(--dhlzy73);
  }
  ._40iiss82 {
    padding-top: var(--dhlzy74);
  }
  ._40iiss86 {
    padding-top: var(--dhlzy75);
  }
  ._40iiss8a {
    padding-top: var(--dhlzy76);
  }
  ._40iiss8e {
    padding-top: var(--dhlzy77);
  }
  ._40iiss8i {
    padding-top: var(--dhlzy78);
  }
  ._40iiss8m {
    padding-top: 0;
  }
  ._40iiss8q {
    padding-bottom: var(--dhlzy70);
  }
  ._40iiss8u {
    padding-bottom: var(--dhlzy71);
  }
  ._40iiss8y {
    padding-bottom: var(--dhlzy72);
  }
  ._40iiss92 {
    padding-bottom: var(--dhlzy73);
  }
  ._40iiss96 {
    padding-bottom: var(--dhlzy74);
  }
  ._40iiss9a {
    padding-bottom: var(--dhlzy75);
  }
  ._40iiss9e {
    padding-bottom: var(--dhlzy76);
  }
  ._40iiss9i {
    padding-bottom: var(--dhlzy77);
  }
  ._40iiss9m {
    padding-bottom: var(--dhlzy78);
  }
  ._40iiss9q {
    padding-bottom: 0;
  }
  ._40iiss9u {
    padding-right: var(--dhlzy70);
  }
  ._40iiss9y {
    padding-right: var(--dhlzy71);
  }
  ._40iissa2 {
    padding-right: var(--dhlzy72);
  }
  ._40iissa6 {
    padding-right: var(--dhlzy73);
  }
  ._40iissaa {
    padding-right: var(--dhlzy74);
  }
  ._40iissae {
    padding-right: var(--dhlzy75);
  }
  ._40iissai {
    padding-right: var(--dhlzy76);
  }
  ._40iissam {
    padding-right: var(--dhlzy77);
  }
  ._40iissaq {
    padding-right: var(--dhlzy78);
  }
  ._40iissau {
    padding-right: 0;
  }
  ._40iissay {
    padding-left: var(--dhlzy70);
  }
  ._40iissb2 {
    padding-left: var(--dhlzy71);
  }
  ._40iissb6 {
    padding-left: var(--dhlzy72);
  }
  ._40iissba {
    padding-left: var(--dhlzy73);
  }
  ._40iissbe {
    padding-left: var(--dhlzy74);
  }
  ._40iissbi {
    padding-left: var(--dhlzy75);
  }
  ._40iissbm {
    padding-left: var(--dhlzy76);
  }
  ._40iissbq {
    padding-left: var(--dhlzy77);
  }
  ._40iissbu {
    padding-left: var(--dhlzy78);
  }
  ._40iissby {
    padding-left: 0;
  }
  ._40iissc2 {
    margin-top: var(--dhlzy70);
  }
  ._40iissc6 {
    margin-top: var(--dhlzy71);
  }
  ._40iissca {
    margin-top: var(--dhlzy72);
  }
  ._40iissce {
    margin-top: var(--dhlzy73);
  }
  ._40iissci {
    margin-top: var(--dhlzy74);
  }
  ._40iisscm {
    margin-top: var(--dhlzy75);
  }
  ._40iisscq {
    margin-top: var(--dhlzy76);
  }
  ._40iisscu {
    margin-top: var(--dhlzy77);
  }
  ._40iisscy {
    margin-top: var(--dhlzy78);
  }
  ._40iissd2 {
    margin-top: 0;
  }
  ._40iissd6 {
    margin-bottom: var(--dhlzy70);
  }
  ._40iissda {
    margin-bottom: var(--dhlzy71);
  }
  ._40iissde {
    margin-bottom: var(--dhlzy72);
  }
  ._40iissdi {
    margin-bottom: var(--dhlzy73);
  }
  ._40iissdm {
    margin-bottom: var(--dhlzy74);
  }
  ._40iissdq {
    margin-bottom: var(--dhlzy75);
  }
  ._40iissdu {
    margin-bottom: var(--dhlzy76);
  }
  ._40iissdy {
    margin-bottom: var(--dhlzy77);
  }
  ._40iisse2 {
    margin-bottom: var(--dhlzy78);
  }
  ._40iisse6 {
    margin-bottom: 0;
  }
  ._40iissea {
    margin-right: var(--dhlzy70);
  }
  ._40iissee {
    margin-right: var(--dhlzy71);
  }
  ._40iissei {
    margin-right: var(--dhlzy72);
  }
  ._40iissem {
    margin-right: var(--dhlzy73);
  }
  ._40iisseq {
    margin-right: var(--dhlzy74);
  }
  ._40iisseu {
    margin-right: var(--dhlzy75);
  }
  ._40iissey {
    margin-right: var(--dhlzy76);
  }
  ._40iissf2 {
    margin-right: var(--dhlzy77);
  }
  ._40iissf6 {
    margin-right: var(--dhlzy78);
  }
  ._40iissfa {
    margin-right: 0;
  }
  ._40iissfe {
    margin-left: var(--dhlzy70);
  }
  ._40iissfi {
    margin-left: var(--dhlzy71);
  }
  ._40iissfm {
    margin-left: var(--dhlzy72);
  }
  ._40iissfq {
    margin-left: var(--dhlzy73);
  }
  ._40iissfu {
    margin-left: var(--dhlzy74);
  }
  ._40iissfy {
    margin-left: var(--dhlzy75);
  }
  ._40iissg2 {
    margin-left: var(--dhlzy76);
  }
  ._40iissg6 {
    margin-left: var(--dhlzy77);
  }
  ._40iissga {
    margin-left: var(--dhlzy78);
  }
  ._40iissge {
    margin-left: 0;
  }
  ._40iissgi {
    align-items: flex-start;
  }
  ._40iissgm {
    align-items: center;
  }
  ._40iissgq {
    align-items: flex-end;
  }
  ._40iissgu {
    justify-content: flex-start;
  }
  ._40iissgy {
    justify-content: center;
  }
  ._40iissh2 {
    justify-content: flex-end;
  }
  ._40iissh6 {
    justify-content: space-between;
  }
  ._40iissha {
    flex-direction: row;
  }
  ._40iisshe {
    flex-direction: row-reverse;
  }
  ._40iisshi {
    flex-direction: column;
  }
  ._40iisshm {
    flex-direction: column-reverse;
  }
  ._40iisshq {
    flex-wrap: wrap;
  }
  ._40iisshu {
    flex-wrap: nowrap;
  }
  ._40iisshy {
    flex-shrink: 0;
  }
  ._40iissi2 {
    flex-grow: 0;
  }
  ._40iissi6 {
    flex-grow: 1;
  }
  ._40iissia {
    text-align: left;
  }
  ._40iissie {
    text-align: center;
  }
  ._40iissii {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._40iiss4v {
    display: none;
  }
  ._40iiss4z {
    display: block;
  }
  ._40iiss53 {
    display: inline;
  }
  ._40iiss57 {
    display: inline-block;
  }
  ._40iiss5b {
    display: flex;
  }
  ._40iiss5f {
    position: relative;
  }
  ._40iiss5j {
    position: absolute;
  }
  ._40iiss5n {
    position: fixed;
  }
  ._40iiss5r {
    position: sticky;
  }
  ._40iiss5v {
    border-radius: 0;
  }
  ._40iiss5z {
    border-radius: 9999px;
  }
  ._40iiss63 {
    border-radius: var(--dhlzy7b);
  }
  ._40iiss67 {
    border-radius: var(--dhlzy7c);
  }
  ._40iiss6b {
    border-radius: var(--dhlzy7d);
  }
  ._40iiss6f {
    border-radius: var(--dhlzy7e);
  }
  ._40iiss6j {
    gap: var(--dhlzy70);
  }
  ._40iiss6n {
    gap: var(--dhlzy71);
  }
  ._40iiss6r {
    gap: var(--dhlzy72);
  }
  ._40iiss6v {
    gap: var(--dhlzy73);
  }
  ._40iiss6z {
    gap: var(--dhlzy74);
  }
  ._40iiss73 {
    gap: var(--dhlzy75);
  }
  ._40iiss77 {
    gap: var(--dhlzy76);
  }
  ._40iiss7b {
    gap: var(--dhlzy77);
  }
  ._40iiss7f {
    gap: var(--dhlzy78);
  }
  ._40iiss7j {
    gap: 0;
  }
  ._40iiss7n {
    padding-top: var(--dhlzy70);
  }
  ._40iiss7r {
    padding-top: var(--dhlzy71);
  }
  ._40iiss7v {
    padding-top: var(--dhlzy72);
  }
  ._40iiss7z {
    padding-top: var(--dhlzy73);
  }
  ._40iiss83 {
    padding-top: var(--dhlzy74);
  }
  ._40iiss87 {
    padding-top: var(--dhlzy75);
  }
  ._40iiss8b {
    padding-top: var(--dhlzy76);
  }
  ._40iiss8f {
    padding-top: var(--dhlzy77);
  }
  ._40iiss8j {
    padding-top: var(--dhlzy78);
  }
  ._40iiss8n {
    padding-top: 0;
  }
  ._40iiss8r {
    padding-bottom: var(--dhlzy70);
  }
  ._40iiss8v {
    padding-bottom: var(--dhlzy71);
  }
  ._40iiss8z {
    padding-bottom: var(--dhlzy72);
  }
  ._40iiss93 {
    padding-bottom: var(--dhlzy73);
  }
  ._40iiss97 {
    padding-bottom: var(--dhlzy74);
  }
  ._40iiss9b {
    padding-bottom: var(--dhlzy75);
  }
  ._40iiss9f {
    padding-bottom: var(--dhlzy76);
  }
  ._40iiss9j {
    padding-bottom: var(--dhlzy77);
  }
  ._40iiss9n {
    padding-bottom: var(--dhlzy78);
  }
  ._40iiss9r {
    padding-bottom: 0;
  }
  ._40iiss9v {
    padding-right: var(--dhlzy70);
  }
  ._40iiss9z {
    padding-right: var(--dhlzy71);
  }
  ._40iissa3 {
    padding-right: var(--dhlzy72);
  }
  ._40iissa7 {
    padding-right: var(--dhlzy73);
  }
  ._40iissab {
    padding-right: var(--dhlzy74);
  }
  ._40iissaf {
    padding-right: var(--dhlzy75);
  }
  ._40iissaj {
    padding-right: var(--dhlzy76);
  }
  ._40iissan {
    padding-right: var(--dhlzy77);
  }
  ._40iissar {
    padding-right: var(--dhlzy78);
  }
  ._40iissav {
    padding-right: 0;
  }
  ._40iissaz {
    padding-left: var(--dhlzy70);
  }
  ._40iissb3 {
    padding-left: var(--dhlzy71);
  }
  ._40iissb7 {
    padding-left: var(--dhlzy72);
  }
  ._40iissbb {
    padding-left: var(--dhlzy73);
  }
  ._40iissbf {
    padding-left: var(--dhlzy74);
  }
  ._40iissbj {
    padding-left: var(--dhlzy75);
  }
  ._40iissbn {
    padding-left: var(--dhlzy76);
  }
  ._40iissbr {
    padding-left: var(--dhlzy77);
  }
  ._40iissbv {
    padding-left: var(--dhlzy78);
  }
  ._40iissbz {
    padding-left: 0;
  }
  ._40iissc3 {
    margin-top: var(--dhlzy70);
  }
  ._40iissc7 {
    margin-top: var(--dhlzy71);
  }
  ._40iisscb {
    margin-top: var(--dhlzy72);
  }
  ._40iisscf {
    margin-top: var(--dhlzy73);
  }
  ._40iisscj {
    margin-top: var(--dhlzy74);
  }
  ._40iisscn {
    margin-top: var(--dhlzy75);
  }
  ._40iisscr {
    margin-top: var(--dhlzy76);
  }
  ._40iisscv {
    margin-top: var(--dhlzy77);
  }
  ._40iisscz {
    margin-top: var(--dhlzy78);
  }
  ._40iissd3 {
    margin-top: 0;
  }
  ._40iissd7 {
    margin-bottom: var(--dhlzy70);
  }
  ._40iissdb {
    margin-bottom: var(--dhlzy71);
  }
  ._40iissdf {
    margin-bottom: var(--dhlzy72);
  }
  ._40iissdj {
    margin-bottom: var(--dhlzy73);
  }
  ._40iissdn {
    margin-bottom: var(--dhlzy74);
  }
  ._40iissdr {
    margin-bottom: var(--dhlzy75);
  }
  ._40iissdv {
    margin-bottom: var(--dhlzy76);
  }
  ._40iissdz {
    margin-bottom: var(--dhlzy77);
  }
  ._40iisse3 {
    margin-bottom: var(--dhlzy78);
  }
  ._40iisse7 {
    margin-bottom: 0;
  }
  ._40iisseb {
    margin-right: var(--dhlzy70);
  }
  ._40iissef {
    margin-right: var(--dhlzy71);
  }
  ._40iissej {
    margin-right: var(--dhlzy72);
  }
  ._40iissen {
    margin-right: var(--dhlzy73);
  }
  ._40iisser {
    margin-right: var(--dhlzy74);
  }
  ._40iissev {
    margin-right: var(--dhlzy75);
  }
  ._40iissez {
    margin-right: var(--dhlzy76);
  }
  ._40iissf3 {
    margin-right: var(--dhlzy77);
  }
  ._40iissf7 {
    margin-right: var(--dhlzy78);
  }
  ._40iissfb {
    margin-right: 0;
  }
  ._40iissff {
    margin-left: var(--dhlzy70);
  }
  ._40iissfj {
    margin-left: var(--dhlzy71);
  }
  ._40iissfn {
    margin-left: var(--dhlzy72);
  }
  ._40iissfr {
    margin-left: var(--dhlzy73);
  }
  ._40iissfv {
    margin-left: var(--dhlzy74);
  }
  ._40iissfz {
    margin-left: var(--dhlzy75);
  }
  ._40iissg3 {
    margin-left: var(--dhlzy76);
  }
  ._40iissg7 {
    margin-left: var(--dhlzy77);
  }
  ._40iissgb {
    margin-left: var(--dhlzy78);
  }
  ._40iissgf {
    margin-left: 0;
  }
  ._40iissgj {
    align-items: flex-start;
  }
  ._40iissgn {
    align-items: center;
  }
  ._40iissgr {
    align-items: flex-end;
  }
  ._40iissgv {
    justify-content: flex-start;
  }
  ._40iissgz {
    justify-content: center;
  }
  ._40iissh3 {
    justify-content: flex-end;
  }
  ._40iissh7 {
    justify-content: space-between;
  }
  ._40iisshb {
    flex-direction: row;
  }
  ._40iisshf {
    flex-direction: row-reverse;
  }
  ._40iisshj {
    flex-direction: column;
  }
  ._40iisshn {
    flex-direction: column-reverse;
  }
  ._40iisshr {
    flex-wrap: wrap;
  }
  ._40iisshv {
    flex-wrap: nowrap;
  }
  ._40iisshz {
    flex-shrink: 0;
  }
  ._40iissi3 {
    flex-grow: 0;
  }
  ._40iissi7 {
    flex-grow: 1;
  }
  ._40iissib {
    text-align: left;
  }
  ._40iissif {
    text-align: center;
  }
  ._40iissij {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._40iiss4w {
    display: none;
  }
  ._40iiss50 {
    display: block;
  }
  ._40iiss54 {
    display: inline;
  }
  ._40iiss58 {
    display: inline-block;
  }
  ._40iiss5c {
    display: flex;
  }
  ._40iiss5g {
    position: relative;
  }
  ._40iiss5k {
    position: absolute;
  }
  ._40iiss5o {
    position: fixed;
  }
  ._40iiss5s {
    position: sticky;
  }
  ._40iiss5w {
    border-radius: 0;
  }
  ._40iiss60 {
    border-radius: 9999px;
  }
  ._40iiss64 {
    border-radius: var(--dhlzy7b);
  }
  ._40iiss68 {
    border-radius: var(--dhlzy7c);
  }
  ._40iiss6c {
    border-radius: var(--dhlzy7d);
  }
  ._40iiss6g {
    border-radius: var(--dhlzy7e);
  }
  ._40iiss6k {
    gap: var(--dhlzy70);
  }
  ._40iiss6o {
    gap: var(--dhlzy71);
  }
  ._40iiss6s {
    gap: var(--dhlzy72);
  }
  ._40iiss6w {
    gap: var(--dhlzy73);
  }
  ._40iiss70 {
    gap: var(--dhlzy74);
  }
  ._40iiss74 {
    gap: var(--dhlzy75);
  }
  ._40iiss78 {
    gap: var(--dhlzy76);
  }
  ._40iiss7c {
    gap: var(--dhlzy77);
  }
  ._40iiss7g {
    gap: var(--dhlzy78);
  }
  ._40iiss7k {
    gap: 0;
  }
  ._40iiss7o {
    padding-top: var(--dhlzy70);
  }
  ._40iiss7s {
    padding-top: var(--dhlzy71);
  }
  ._40iiss7w {
    padding-top: var(--dhlzy72);
  }
  ._40iiss80 {
    padding-top: var(--dhlzy73);
  }
  ._40iiss84 {
    padding-top: var(--dhlzy74);
  }
  ._40iiss88 {
    padding-top: var(--dhlzy75);
  }
  ._40iiss8c {
    padding-top: var(--dhlzy76);
  }
  ._40iiss8g {
    padding-top: var(--dhlzy77);
  }
  ._40iiss8k {
    padding-top: var(--dhlzy78);
  }
  ._40iiss8o {
    padding-top: 0;
  }
  ._40iiss8s {
    padding-bottom: var(--dhlzy70);
  }
  ._40iiss8w {
    padding-bottom: var(--dhlzy71);
  }
  ._40iiss90 {
    padding-bottom: var(--dhlzy72);
  }
  ._40iiss94 {
    padding-bottom: var(--dhlzy73);
  }
  ._40iiss98 {
    padding-bottom: var(--dhlzy74);
  }
  ._40iiss9c {
    padding-bottom: var(--dhlzy75);
  }
  ._40iiss9g {
    padding-bottom: var(--dhlzy76);
  }
  ._40iiss9k {
    padding-bottom: var(--dhlzy77);
  }
  ._40iiss9o {
    padding-bottom: var(--dhlzy78);
  }
  ._40iiss9s {
    padding-bottom: 0;
  }
  ._40iiss9w {
    padding-right: var(--dhlzy70);
  }
  ._40iissa0 {
    padding-right: var(--dhlzy71);
  }
  ._40iissa4 {
    padding-right: var(--dhlzy72);
  }
  ._40iissa8 {
    padding-right: var(--dhlzy73);
  }
  ._40iissac {
    padding-right: var(--dhlzy74);
  }
  ._40iissag {
    padding-right: var(--dhlzy75);
  }
  ._40iissak {
    padding-right: var(--dhlzy76);
  }
  ._40iissao {
    padding-right: var(--dhlzy77);
  }
  ._40iissas {
    padding-right: var(--dhlzy78);
  }
  ._40iissaw {
    padding-right: 0;
  }
  ._40iissb0 {
    padding-left: var(--dhlzy70);
  }
  ._40iissb4 {
    padding-left: var(--dhlzy71);
  }
  ._40iissb8 {
    padding-left: var(--dhlzy72);
  }
  ._40iissbc {
    padding-left: var(--dhlzy73);
  }
  ._40iissbg {
    padding-left: var(--dhlzy74);
  }
  ._40iissbk {
    padding-left: var(--dhlzy75);
  }
  ._40iissbo {
    padding-left: var(--dhlzy76);
  }
  ._40iissbs {
    padding-left: var(--dhlzy77);
  }
  ._40iissbw {
    padding-left: var(--dhlzy78);
  }
  ._40iissc0 {
    padding-left: 0;
  }
  ._40iissc4 {
    margin-top: var(--dhlzy70);
  }
  ._40iissc8 {
    margin-top: var(--dhlzy71);
  }
  ._40iisscc {
    margin-top: var(--dhlzy72);
  }
  ._40iisscg {
    margin-top: var(--dhlzy73);
  }
  ._40iissck {
    margin-top: var(--dhlzy74);
  }
  ._40iissco {
    margin-top: var(--dhlzy75);
  }
  ._40iisscs {
    margin-top: var(--dhlzy76);
  }
  ._40iisscw {
    margin-top: var(--dhlzy77);
  }
  ._40iissd0 {
    margin-top: var(--dhlzy78);
  }
  ._40iissd4 {
    margin-top: 0;
  }
  ._40iissd8 {
    margin-bottom: var(--dhlzy70);
  }
  ._40iissdc {
    margin-bottom: var(--dhlzy71);
  }
  ._40iissdg {
    margin-bottom: var(--dhlzy72);
  }
  ._40iissdk {
    margin-bottom: var(--dhlzy73);
  }
  ._40iissdo {
    margin-bottom: var(--dhlzy74);
  }
  ._40iissds {
    margin-bottom: var(--dhlzy75);
  }
  ._40iissdw {
    margin-bottom: var(--dhlzy76);
  }
  ._40iisse0 {
    margin-bottom: var(--dhlzy77);
  }
  ._40iisse4 {
    margin-bottom: var(--dhlzy78);
  }
  ._40iisse8 {
    margin-bottom: 0;
  }
  ._40iissec {
    margin-right: var(--dhlzy70);
  }
  ._40iisseg {
    margin-right: var(--dhlzy71);
  }
  ._40iissek {
    margin-right: var(--dhlzy72);
  }
  ._40iisseo {
    margin-right: var(--dhlzy73);
  }
  ._40iisses {
    margin-right: var(--dhlzy74);
  }
  ._40iissew {
    margin-right: var(--dhlzy75);
  }
  ._40iissf0 {
    margin-right: var(--dhlzy76);
  }
  ._40iissf4 {
    margin-right: var(--dhlzy77);
  }
  ._40iissf8 {
    margin-right: var(--dhlzy78);
  }
  ._40iissfc {
    margin-right: 0;
  }
  ._40iissfg {
    margin-left: var(--dhlzy70);
  }
  ._40iissfk {
    margin-left: var(--dhlzy71);
  }
  ._40iissfo {
    margin-left: var(--dhlzy72);
  }
  ._40iissfs {
    margin-left: var(--dhlzy73);
  }
  ._40iissfw {
    margin-left: var(--dhlzy74);
  }
  ._40iissg0 {
    margin-left: var(--dhlzy75);
  }
  ._40iissg4 {
    margin-left: var(--dhlzy76);
  }
  ._40iissg8 {
    margin-left: var(--dhlzy77);
  }
  ._40iissgc {
    margin-left: var(--dhlzy78);
  }
  ._40iissgg {
    margin-left: 0;
  }
  ._40iissgk {
    align-items: flex-start;
  }
  ._40iissgo {
    align-items: center;
  }
  ._40iissgs {
    align-items: flex-end;
  }
  ._40iissgw {
    justify-content: flex-start;
  }
  ._40iissh0 {
    justify-content: center;
  }
  ._40iissh4 {
    justify-content: flex-end;
  }
  ._40iissh8 {
    justify-content: space-between;
  }
  ._40iisshc {
    flex-direction: row;
  }
  ._40iisshg {
    flex-direction: row-reverse;
  }
  ._40iisshk {
    flex-direction: column;
  }
  ._40iissho {
    flex-direction: column-reverse;
  }
  ._40iisshs {
    flex-wrap: wrap;
  }
  ._40iisshw {
    flex-wrap: nowrap;
  }
  ._40iissi0 {
    flex-shrink: 0;
  }
  ._40iissi4 {
    flex-grow: 0;
  }
  ._40iissi8 {
    flex-grow: 1;
  }
  ._40iissic {
    text-align: left;
  }
  ._40iissig {
    text-align: center;
  }
  ._40iissik {
    text-align: right;
  }
}
.tnh8au0 {
  --dhlzy70: 24px;
  --dhlzy71: 8px;
  --dhlzy72: 12px;
  --dhlzy73: 16px;
  --dhlzy74: 24px;
  --dhlzy75: 32px;
  --dhlzy76: 48px;
  --dhlzy77: 64px;
  --dhlzy78: 96px;
  --dhlzy79: 48px;
  --dhlzy7a: 4px;
  --dhlzy7b: 4px;
  --dhlzy7c: 8px;
  --dhlzy7d: 16px;
  --dhlzy7e: 24px;
  --dhlzy7f: #e60278;
  --dhlzy7g: #f8b1dc;
  --dhlzy7h: #fdc221;
  --dhlzy7i: #fee384;
  --dhlzy7j: #b91e1e;
  --dhlzy7k: #fb999a;
  --dhlzy7l: #838fa5;
  --dhlzy7m: rgba(153, 191, 247, 0.7);
  --dhlzy7n: #1e47a9;
  --dhlzy7o: #99bff7;
  --dhlzy7p: #1d559d;
  --dhlzy7q: #98c9f1;
  --dhlzy7r: #2e3849;
  --dhlzy7t: #eaecf1;
  --dhlzy7s: #fff;
  --dhlzy7u: #12784f;
  --dhlzy7v: #8bdec5;
  --dhlzy7w: #7f35a9;
  --dhlzy7x: #e1b2f5;
  --dhlzy7y: 2px;
  --dhlzy7z: 4px;
  --dhlzy710: 6px;
  --dhlzy711: 400px;
  --dhlzy712: 660px;
  --dhlzy713: 940px;
  --dhlzy714: 1280px;
  --dhlzy715: #e60278;
  --dhlzy716: #f8b1dc;
  --dhlzy717: #723d02;
  --dhlzy718: #fee384;
  --dhlzy719: #b91e1e;
  --dhlzy71a: #fb999a;
  --dhlzy71b: #1e47a9;
  --dhlzy71c: #99bff7;
  --dhlzy71d: #1d559d;
  --dhlzy71e: #98c9f1;
  --dhlzy71f: #2e3849;
  --dhlzy71h: #fff;
  --dhlzy71g: #2e3849;
  --dhlzy71i: #5b2084;
  --dhlzy71j: #f0d6fa;
  --dhlzy71k: #2e3849;
  --dhlzy71l: #fff;
  --dhlzy71m: #12784f;
  --dhlzy71n: #8bdec5;
  --dhlzy71o: #7f35a9;
  --dhlzy71p: #e1b2f5;
  --dhlzy71q: #5a6881;
  --dhlzy71r: hsla(0, 0%, 100%, 0.65);
  --dhlzy71s: #fff;
  --dhlzy71t: #1c2330;
  --dhlzy71u: #051a49;
  --dhlzy71v: #e60278;
  --dhlzy71w: #cd026b;
  --dhlzy71x: #fd0585;
  --dhlzy71y: #feeffa;
  --dhlzy71z: #fdd7f3;
  --dhlzy720: #fde3f6;
  --dhlzy721: #fdc221;
  --dhlzy722: #fef8de;
  --dhlzy723: #b91e1e;
  --dhlzy724: #a31a1a;
  --dhlzy725: #db1616;
  --dhlzy726: #ffe3e2;
  --dhlzy727: #fef3f3;
  --dhlzy728: #fcdbdb;
  --dhlzy729: #fde7e7;
  --dhlzy72a: #1e47a9;
  --dhlzy72b: #1a3e93;
  --dhlzy72c: #2455c9;
  --dhlzy72d: #f0f7fe;
  --dhlzy72e: #d8eafc;
  --dhlzy72f: #e4f1fd;
  --dhlzy72g: #1d559d;
  --dhlzy72h: #e3f2fb;
  --dhlzy72i: #2e3849;
  --dhlzy72j: #242c39;
  --dhlzy72k: #384459;
  --dhlzy72l: #f3f5f7;
  --dhlzy72m: #f3f5f7;
  --dhlzy72n: #e4e8ed;
  --dhlzy72o: #ebeff2;
  --dhlzy72p: #12784f;
  --dhlzy72q: #e2f7f1;
  --dhlzy72r: #7f35a9;
  --dhlzy72s: #f9ebfd;
  --dhlzy72t: #fff;
  --dhlzy72u: #1c2330;
  --dhlzy72v: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --dhlzy72w: 783;
  --dhlzy72x: 1057;
  --dhlzy72y: -274;
  --dhlzy72z: 0;
  --dhlzy730: 1000;
  --dhlzy73v: 18px;
  --dhlzy73w: 27.094px;
  --dhlzy73x: 14.094px;
  --dhlzy73y: -0.3611em;
  --dhlzy73z: -0.3611em;
  --dhlzy740: 18px;
  --dhlzy741: 27.094px;
  --dhlzy742: 14.094px;
  --dhlzy743: -0.3611em;
  --dhlzy744: -0.3611em;
  --dhlzy73l: 16px;
  --dhlzy73m: 24.528px;
  --dhlzy73n: 12.528px;
  --dhlzy73o: -0.375em;
  --dhlzy73p: -0.375em;
  --dhlzy73q: 16px;
  --dhlzy73r: 24.528px;
  --dhlzy73s: 12.528px;
  --dhlzy73t: -0.375em;
  --dhlzy73u: -0.375em;
  --dhlzy73b: 14px;
  --dhlzy73c: 20.962px;
  --dhlzy73d: 10.962px;
  --dhlzy73e: -0.3571em;
  --dhlzy73f: -0.3571em;
  --dhlzy73g: 14px;
  --dhlzy73h: 20.962px;
  --dhlzy73i: 10.962px;
  --dhlzy73j: -0.3571em;
  --dhlzy73k: -0.3571em;
  --dhlzy731: 12px;
  --dhlzy732: 18.396px;
  --dhlzy733: 9.396px;
  --dhlzy734: -0.375em;
  --dhlzy735: -0.375em;
  --dhlzy736: 12px;
  --dhlzy737: 18.396px;
  --dhlzy738: 9.396px;
  --dhlzy739: -0.375em;
  --dhlzy73a: -0.375em;
  --dhlzy745: 400;
  --dhlzy746: 600;
  --dhlzy747: 700;
  --dhlzy748: 28px;
  --dhlzy749: 32.924px;
  --dhlzy74a: 21.924px;
  --dhlzy74b: -0.1964em;
  --dhlzy74c: -0.1964em;
  --dhlzy74d: 36px;
  --dhlzy74e: 42.188px;
  --dhlzy74f: 28.188px;
  --dhlzy74g: -0.1944em;
  --dhlzy74h: -0.1944em;
  --dhlzy74i: 24px;
  --dhlzy74j: 29.792px;
  --dhlzy74k: 18.792px;
  --dhlzy74l: -0.2292em;
  --dhlzy74m: -0.2292em;
  --dhlzy74n: 30px;
  --dhlzy74o: 36.49px;
  --dhlzy74p: 23.49px;
  --dhlzy74q: -0.2167em;
  --dhlzy74r: -0.2167em;
  --dhlzy74s: 22px;
  --dhlzy74t: 27.226px;
  --dhlzy74u: 17.226px;
  --dhlzy74v: -0.2273em;
  --dhlzy74w: -0.2273em;
  --dhlzy74x: 24px;
  --dhlzy74y: 29.792px;
  --dhlzy74z: 18.792px;
  --dhlzy750: -0.2292em;
  --dhlzy751: -0.2292em;
  --dhlzy752: 20px;
  --dhlzy753: 24.66px;
  --dhlzy754: 15.66px;
  --dhlzy755: -0.225em;
  --dhlzy756: -0.225em;
  --dhlzy757: 20px;
  --dhlzy758: 24.66px;
  --dhlzy759: 15.66px;
  --dhlzy75a: -0.225em;
  --dhlzy75b: -0.225em;
  --dhlzy75c: 400;
  --dhlzy75d: 600;
  --dhlzy75e: underline;
  --dhlzy75f: 24px;
  --dhlzy75g: 20px;
  --dhlzy75h: transform 0.125s ease, opacity 0.125s ease;
  --dhlzy75i: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --dhlzy75j: scale(0.95);
  --dhlzy75k:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --dhlzy75l:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --dhlzy75m:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._1xascs94 {
  font-size: var(--_1xascs90);
  line-height: var(--_1xascs91);
}
._1xascs94:before {
  content: "";
  display: table;
  margin-bottom: var(--_1xascs92);
}
._1xascs94:after {
  content: "";
  display: table;
  margin-top: var(--_1xascs93);
}
._1vjf7ro0 {
  font-family: var(--dhlzy72v);
}
._1vjf7ro1 {
  font-weight: var(--dhlzy745);
}
._1vjf7ro2 {
  font-weight: var(--dhlzy746);
}
._1vjf7ro3 {
  font-weight: var(--dhlzy747);
}
._1vjf7ro4 {
  --_1xascs90: var(--dhlzy731);
  --_1xascs91: var(--dhlzy732);
  --_1xascs92: var(--dhlzy734);
  --_1xascs93: var(--dhlzy735);
}
._1vjf7ro6 {
  --_1xascs90: var(--dhlzy73b);
  --_1xascs91: var(--dhlzy73c);
  --_1xascs92: var(--dhlzy73e);
  --_1xascs93: var(--dhlzy73f);
}
._1vjf7ro8 {
  --_1xascs90: var(--dhlzy73l);
  --_1xascs91: var(--dhlzy73m);
  --_1xascs92: var(--dhlzy73o);
  --_1xascs93: var(--dhlzy73p);
}
._1vjf7roa {
  --_1xascs90: var(--dhlzy73v);
  --_1xascs91: var(--dhlzy73w);
  --_1xascs92: var(--dhlzy73y);
  --_1xascs93: var(--dhlzy73z);
}
._1vjf7roc {
  font-size: var(--dhlzy731);
  line-height: var(--dhlzy732);
}
._1vjf7rod {
  font-size: var(--dhlzy73b);
  line-height: var(--dhlzy73c);
}
._1vjf7roe {
  font-size: var(--dhlzy73l);
  line-height: var(--dhlzy73m);
}
._1vjf7rof {
  font-size: var(--dhlzy73v);
  line-height: var(--dhlzy73w);
}
._1vjf7rog {
  font-weight: var(--dhlzy75c);
}
._1vjf7roh {
  font-weight: var(--dhlzy75d);
}
._1vjf7roi {
  --_1xascs90: var(--dhlzy748);
  --_1xascs91: var(--dhlzy749);
  --_1xascs92: var(--dhlzy74b);
  --_1xascs93: var(--dhlzy74c);
}
._1vjf7rok {
  --_1xascs90: var(--dhlzy74i);
  --_1xascs91: var(--dhlzy74j);
  --_1xascs92: var(--dhlzy74l);
  --_1xascs93: var(--dhlzy74m);
}
._1vjf7rom {
  --_1xascs90: var(--dhlzy74s);
  --_1xascs91: var(--dhlzy74t);
  --_1xascs92: var(--dhlzy74v);
  --_1xascs93: var(--dhlzy74w);
}
._1vjf7roo {
  --_1xascs90: var(--dhlzy752);
  --_1xascs91: var(--dhlzy753);
  --_1xascs92: var(--dhlzy755);
  --_1xascs93: var(--dhlzy756);
}
html:not(._40iiss10) ._1vjf7ro10 {
  --_1vjf7roq: var(--dhlzy719);
  --_1vjf7ror: var(--dhlzy717);
  --_1vjf7ros: var(--dhlzy71d);
  --_1vjf7rot: var(--dhlzy71o);
  --_1vjf7rou: var(--dhlzy71m);
  --_1vjf7rov: var(--dhlzy715);
  --_1vjf7row: var(--dhlzy71b);
  --_1vjf7rox: var(--dhlzy71k);
  --_1vjf7roy: var(--dhlzy71q);
  --_1vjf7roz: var(--dhlzy71f);
}
html:not(._40iiss10) ._1vjf7ro11 {
  --_1vjf7roq: var(--dhlzy71a);
  --_1vjf7ror: var(--dhlzy718);
  --_1vjf7ros: var(--dhlzy71e);
  --_1vjf7rot: var(--dhlzy71p);
  --_1vjf7rou: var(--dhlzy71n);
  --_1vjf7rov: var(--dhlzy716);
  --_1vjf7row: var(--dhlzy71c);
  --_1vjf7rox: var(--dhlzy71l);
  --_1vjf7roy: var(--dhlzy71r);
  --_1vjf7roz: var(--dhlzy71h);
}
html._40iiss10 ._1vjf7ro12 {
  --_1vjf7roq: var(--dhlzy719);
  --_1vjf7ror: var(--dhlzy717);
  --_1vjf7ros: var(--dhlzy71d);
  --_1vjf7rot: var(--dhlzy71o);
  --_1vjf7rou: var(--dhlzy71m);
  --_1vjf7rov: var(--dhlzy715);
  --_1vjf7row: var(--dhlzy71b);
  --_1vjf7rox: var(--dhlzy71k);
  --_1vjf7roy: var(--dhlzy71q);
  --_1vjf7roz: var(--dhlzy71f);
}
html._40iiss10 ._1vjf7ro13 {
  --_1vjf7roq: var(--dhlzy71a);
  --_1vjf7ror: var(--dhlzy718);
  --_1vjf7ros: var(--dhlzy71e);
  --_1vjf7rot: var(--dhlzy71p);
  --_1vjf7rou: var(--dhlzy71n);
  --_1vjf7rov: var(--dhlzy716);
  --_1vjf7row: var(--dhlzy71c);
  --_1vjf7rox: var(--dhlzy71l);
  --_1vjf7roy: var(--dhlzy71r);
  --_1vjf7roz: var(--dhlzy71h);
}
html:not(._40iiss10) ._1vjf7ro14,
html:not(._40iiss10) ._1vjf7ro15,
html:not(._40iiss10) ._1vjf7ro16,
html:not(._40iiss10) ._1vjf7ro17 {
  --_1vjf7rox: var(--_1vjf7roq);
}
html:not(._40iiss10) ._1vjf7ro18,
html:not(._40iiss10) ._1vjf7ro19 {
  --_1vjf7rox: var(--_1vjf7ror);
}
html:not(._40iiss10) ._1vjf7ro1a {
  --_1vjf7rox: var(--_1vjf7rou);
}
html:not(._40iiss10) ._1vjf7ro1b {
  --_1vjf7rox: var(--_1vjf7ros);
}
html:not(._40iiss10) ._1vjf7ro1c {
  --_1vjf7rox: var(--_1vjf7rot);
}
html._40iiss10 ._1vjf7ro1d,
html._40iiss10 ._1vjf7ro1e,
html._40iiss10 ._1vjf7ro1f,
html._40iiss10 ._1vjf7ro1g {
  --_1vjf7rox: var(--_1vjf7roq);
}
html._40iiss10 ._1vjf7ro1h,
html._40iiss10 ._1vjf7ro1i {
  --_1vjf7rox: var(--_1vjf7ror);
}
html._40iiss10 ._1vjf7ro1j {
  --_1vjf7rox: var(--_1vjf7rou);
}
html._40iiss10 ._1vjf7ro1k {
  --_1vjf7rox: var(--_1vjf7ros);
}
html._40iiss10 ._1vjf7ro1l {
  --_1vjf7rox: var(--_1vjf7rot);
}
._1vjf7ro1m {
  color: var(--_1vjf7roq);
}
._1vjf7ro1n {
  color: var(--_1vjf7ror);
}
._1vjf7ro1o {
  color: var(--_1vjf7ros);
}
._1vjf7ro1p {
  color: var(--_1vjf7rot);
}
._1vjf7ro1q {
  color: var(--_1vjf7rou);
}
._1vjf7ro1r {
  color: var(--_1vjf7rov);
}
._1vjf7ro1s {
  color: var(--_1vjf7row);
}
._1vjf7ro1t {
  color: var(--_1vjf7rox);
}
._1vjf7ro1u {
  color: var(--_1vjf7roy);
}
._1vjf7ro1v {
  color: var(--_1vjf7roz);
}
._1vjf7ro1w {
  padding-bottom: calc((var(--dhlzy79) - var(--dhlzy732)) / 2);
  padding-top: calc((var(--dhlzy79) - var(--dhlzy732)) / 2);
}
._1vjf7ro1x {
  padding-bottom: calc((var(--dhlzy79) - var(--dhlzy73c)) / 2);
  padding-top: calc((var(--dhlzy79) - var(--dhlzy73c)) / 2);
}
._1vjf7ro1y {
  padding-bottom: calc((var(--dhlzy79) - var(--dhlzy73m)) / 2);
  padding-top: calc((var(--dhlzy79) - var(--dhlzy73m)) / 2);
}
._1vjf7ro1z {
  padding-bottom: calc((var(--dhlzy79) - var(--dhlzy73w)) / 2);
  padding-top: calc((var(--dhlzy79) - var(--dhlzy73w)) / 2);
}
@media screen and (min-width: 740px) {
  ._1vjf7ro4 {
    --_1xascs90: var(--dhlzy736);
    --_1xascs91: var(--dhlzy737);
    --_1xascs92: var(--dhlzy739);
    --_1xascs93: var(--dhlzy73a);
  }
  ._1vjf7ro6 {
    --_1xascs90: var(--dhlzy73g);
    --_1xascs91: var(--dhlzy73h);
    --_1xascs92: var(--dhlzy73j);
    --_1xascs93: var(--dhlzy73k);
  }
  ._1vjf7ro8 {
    --_1xascs90: var(--dhlzy73q);
    --_1xascs91: var(--dhlzy73r);
    --_1xascs92: var(--dhlzy73t);
    --_1xascs93: var(--dhlzy73u);
  }
  ._1vjf7roa {
    --_1xascs90: var(--dhlzy740);
    --_1xascs91: var(--dhlzy741);
    --_1xascs92: var(--dhlzy743);
    --_1xascs93: var(--dhlzy744);
  }
  ._1vjf7roc {
    font-size: var(--dhlzy736);
    line-height: var(--dhlzy737);
  }
  ._1vjf7rod {
    font-size: var(--dhlzy73g);
    line-height: var(--dhlzy73h);
  }
  ._1vjf7roe {
    font-size: var(--dhlzy73q);
    line-height: var(--dhlzy73r);
  }
  ._1vjf7rof {
    font-size: var(--dhlzy740);
    line-height: var(--dhlzy741);
  }
  ._1vjf7roi {
    --_1xascs90: var(--dhlzy74d);
    --_1xascs91: var(--dhlzy74e);
    --_1xascs92: var(--dhlzy74g);
    --_1xascs93: var(--dhlzy74h);
  }
  ._1vjf7rok {
    --_1xascs90: var(--dhlzy74n);
    --_1xascs91: var(--dhlzy74o);
    --_1xascs92: var(--dhlzy74q);
    --_1xascs93: var(--dhlzy74r);
  }
  ._1vjf7rom {
    --_1xascs90: var(--dhlzy74x);
    --_1xascs91: var(--dhlzy74y);
    --_1xascs92: var(--dhlzy750);
    --_1xascs93: var(--dhlzy751);
  }
  ._1vjf7roo {
    --_1xascs90: var(--dhlzy757);
    --_1xascs91: var(--dhlzy758);
    --_1xascs92: var(--dhlzy75a);
    --_1xascs93: var(--dhlzy75b);
  }
  ._1vjf7ro1w {
    padding-bottom: calc((var(--dhlzy79) - var(--dhlzy737)) / 2);
    padding-top: calc((var(--dhlzy79) - var(--dhlzy737)) / 2);
  }
  ._1vjf7ro1x {
    padding-bottom: calc((var(--dhlzy79) - var(--dhlzy73h)) / 2);
    padding-top: calc((var(--dhlzy79) - var(--dhlzy73h)) / 2);
  }
  ._1vjf7ro1y {
    padding-bottom: calc((var(--dhlzy79) - var(--dhlzy73r)) / 2);
    padding-top: calc((var(--dhlzy79) - var(--dhlzy73r)) / 2);
  }
  ._1vjf7ro1z {
    padding-bottom: calc((var(--dhlzy79) - var(--dhlzy741)) / 2);
    padding-top: calc((var(--dhlzy79) - var(--dhlzy741)) / 2);
  }
}
.qgk0za0 {
  margin-bottom: -0.1em;
}
.qgk0za2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.qgk0za0 .qgk0za2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .qgk0za4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--qgk0za3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
._15ius356 {
  background: var(--_15ius350);
}
._15ius357 {
  background: var(--_15ius351);
}
._15ius358 {
  background: var(--_15ius352);
}
._15ius359 {
  background: var(--_15ius353);
}
._15ius35a {
  background: var(--_15ius354);
}
._15ius35b {
  background: var(--_15ius355);
}
html:not(._40iiss10) ._15ius35c {
  --_15ius350: var(--dhlzy7w);
  --_15ius351: var(--dhlzy7p);
  --_15ius352: var(--dhlzy7u);
  --_15ius353: var(--dhlzy7h);
  --_15ius354: var(--dhlzy7j);
  --_15ius355: var(--dhlzy7n);
}
html:not(._40iiss10) ._15ius35d {
  --_15ius350: var(--dhlzy7x);
  --_15ius351: var(--dhlzy7q);
  --_15ius352: var(--dhlzy7v);
  --_15ius353: var(--dhlzy7i);
  --_15ius354: var(--dhlzy7k);
  --_15ius355: var(--dhlzy7o);
}
html._40iiss10 ._15ius35e {
  --_15ius350: var(--dhlzy7w);
  --_15ius351: var(--dhlzy7p);
  --_15ius352: var(--dhlzy7u);
  --_15ius353: var(--dhlzy7h);
  --_15ius354: var(--dhlzy7j);
  --_15ius355: var(--dhlzy7n);
}
html._40iiss10 ._15ius35f {
  --_15ius350: var(--dhlzy7x);
  --_15ius351: var(--dhlzy7q);
  --_15ius352: var(--dhlzy7v);
  --_15ius353: var(--dhlzy7i);
  --_15ius354: var(--dhlzy7k);
  --_15ius355: var(--dhlzy7o);
}
._15ius35g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._15ius35h {
  width: var(--dhlzy7e);
}
._15ius35i {
  width: var(--dhlzy7a);
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__40iiss10,html.sprinkles_darkMode__40iiss10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__tnh8au0 typography_lightModeTone_light__1vjf7ro10 typography_darkModeTone_dark__1vjf7ro13">
+        <div class="reset_base__o47gt70 sprinkles_paddingBottom_gutter_mobile__40iiss8p sprinkles_paddingTop_gutter_mobile__40iiss7l sprinkles_paddingLeft_gutter_mobile__40iissax sprinkles_paddingRight_gutter_mobile__40iiss9t sprinkles_position_relative_mobile__40iiss5d sprinkles_borderRadius_large_mobile__40iiss69 sprinkles_textAlign_left_mobile__40iissi9 sprinkles_boxShadow_borderNeutralLight_lightMode__40iiss4j sprinkles_boxShadow_borderNeutral_darkMode__40iiss4c typography_lightModeTone_light__1vjf7ro10 typography_darkModeTone_dark__1vjf7ro13 sprinkles_background_surface_lightMode__40iiss33 sprinkles_background_surfaceDark_darkMode__40iiss36">
+          <span class="reset_base__o47gt70 sprinkles_display_block_mobile__40iiss4x typography_fontFamily__1vjf7ro0 typography_fontWeight_regular__1vjf7ro1 typography_tone_neutral__1vjf7ro1t typography_textSize_large__1vjf7roa capsize_capsizeStyle__1xascs94">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
